--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,45 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Mercury API testing
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <ion-grid>
+    <ion-row>
+      <ion-col col-12>
+        <ion-item>
+          <ion-label floating> Enter Url address </ion-label>
+          <ion-input type="text" [(ngModel)]="url" (onChange)="sendAPIRequest(url)" ></ion-input>
+        </ion-item>
+      </ion-col>    
+    </ion-row>
+
+    <ion-row>
+      <ion-col col-12>
+        <ion-item>
+          <button ion-button color="secondary" (click)="sendAPIRequest(url)"  > Send API request</button>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+
+
+  <ion-row>
+      <ion-col col-12>
+          <ion-list>
+              <ion-item *ngFor="let url of listOfUrls">
+                <h2>{{url.title}}</h2>
+                <h3>{{url.content}}</h3>
+                <h3> {{url.date_published}}</h3>
+                <p>{{url.domain}}</p>
+                <button ion-button color="secondary" (click)="openStatisticsPage(url)"> Show statistics </button>
+              </ion-item>
+            </ion-list>
+      </ion-col>    
+    </ion-row>
+
+
+</ion-grid>
 </ion-content>
