--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Mercury API testing
+      Mercury api testing
 
     </ion-title>
   </ion-navbar>
